--- a/plugins/templates/minimalistic/public/form.css
+++ b/plugins/templates/minimalistic/public/form.css
@@ -159,7 +159,7 @@ select:active, select:focus {
 
 select[name="group_id"], select[name="action"], select[name="new_forum"] {
     background-color: transparent;
-    background-image: url("images/menu/select_arrow.png");
+    background-image: url("../images/menu/select_arrow.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -192,7 +192,7 @@ select[name="group_id"], select[name="action"], select[name="new_forum"] {
 
 select[name="group_id"]:hover, select[name="action"]:hover, select[name="new_forum"]:hover {
     background-color: transparent;
-    background-image: url("images/menu/select_arrow.png");
+    background-image: url("../images/menu/select_arrow.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -257,7 +257,7 @@ a.button:active, a.button:focus {
 
 .posts-form a.button {
     background-color: rgb(232, 232, 232);
-    background-image: url("images/buttons/comments-black.png");
+    background-image: url("../images/buttons/comments-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -292,7 +292,7 @@ a.button:active, a.button:focus {
 
 .posts-form a.button:hover {
     background-color: rgb(222, 222, 222);
-    background-image: url("images/buttons/comments-black.png");
+    background-image: url("../images/buttons/comments-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -302,6 +302,7 @@ a.button:active, a.button:focus {
     background-size: 17px auto;
     color: #111111;
     padding: 8px 8px 8px 29px;
+    margin: 0 0 5px;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -319,7 +320,7 @@ a.button:active, a.button:focus {
 
 .posts-form a.button:active, .posts-form a.button:focus {
     background-color: rgb(222, 222, 222);
-    background-image: url("images/buttons/comments-black.png");
+    background-image: url("../images/buttons/comments-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -329,6 +330,7 @@ a.button:active, a.button:focus {
     background-size: 17px auto;
     color: #111111;
     padding: 8px 8px 8px 29px;
+    margin: 0 0 5px;
     border-top-width: 1px;
     border-bottom-width: 1px;
     border-left-width: 1px;
@@ -381,7 +383,7 @@ input.inputsmall, form {
         width: 100%;
         margin: 10px 0 0;
         float: left;
-        display: inline-block;
+        display: block;
     }
 
     select {
@@ -403,7 +405,7 @@ input.inputsmall, form {
         width: 100%;
         padding: 8px 14px 8px 0;
         float: left;
-        display: inline-block;
+        display: block;
     }
 
     .button img.icon {
@@ -476,7 +478,6 @@ input[type="text"]:hover, input[type="text"]:focus, input[type="password"]:hover
 @media only screen and (max-width: 750px) {
     input.inputsmall, form {
         width: 100%;
-        float: left;
         display: inline-block;
     }
 
@@ -496,7 +497,7 @@ input[type="text"]:hover, input[type="text"]:focus, input[type="password"]:hover
         overflow-x: hidden;
         overflow-y: hidden;
         float: left;
-        display: inline-block;
+        display: block;
     }
 
     input[type="text"], input[type="password"] {
