--- a/plugins/templates/minimalistic/public/search.css
+++ b/plugins/templates/minimalistic/public/search.css
@@ -85,7 +85,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
 
 .searchform input[type="submit"] {
     background-color: rgb(90, 90, 90);
-    background-image: url("images/up/up-search.png");
+    background-image: url("../images/up/up-search.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -126,7 +126,7 @@ input.search-query[type="search"]:hover, input.search-query[type="search"]:focus
 
 .searchform input[type="submit"]:hover, .searchform input[type="submit"]:active {
     background-color: rgb(50, 50, 50);
-    background-image: url("images/up/up-search.png");
+    background-image: url("../images/up/up-search.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
