--- a/plugins/templates/minimalistic/public/system.css
+++ b/plugins/templates/minimalistic/public/system.css
@@ -46,7 +46,7 @@
 
 .breadcrumbs a {
     background-color: transparent;
-    background-image: url("images/menu/menu_a-black.png");
+    background-image: url("../images/menu/menu_a-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -65,7 +65,7 @@
 
 .breadcrumbs a:hover {
     background-color: transparent;
-    background-image: url("images/menu/menu_a-black.png");
+    background-image: url("../images/menu/menu_a-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -79,7 +79,7 @@
 
 .breadcrumbs a:active, .breadcrumbs a:focus {
     background-color: transparent;
-    background-image: url("images/menu/menu_a-black.png");
+    background-image: url("../images/menu/menu_a-black.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -121,13 +121,12 @@
     margin: 0 0 20px;
     overflow-x: hidden;
     overflow-y: hidden;
-    float: left;
     display: inline-block;
 }
 
 .message-ok {
     background-color: rgb(234, 235, 238);
-    background-image: url("images/system/info.png");
+    background-image: url("../images/system/info.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -153,7 +152,7 @@
 
 .message-warn {
     background-color: rgb(236, 233, 216);
-    background-image: url("images/system/warn.png");
+    background-image: url("../images/system/warn.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -179,7 +178,7 @@
 
 .message-err {
     background-color: rgb(242, 222, 222);
-    background-image: url("images/system/error.png");
+    background-image: url("../images/system/error.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-clip: border-box;
@@ -208,7 +207,7 @@
     padding: 5px;
     margin: 10px 0 15px;
     float: left;
-    display: inline-block;
+    display: block;
 }
 
 .paging-label {
@@ -505,7 +504,7 @@ form.postform {
     width: 100%;
     clear: both;
     float: left;
-    display: inline-block;
+    display: block;
 }
 
 a .icon, .icon {
@@ -557,6 +556,7 @@ a .icon, .icon {
     min-width: 20px;
     height: 1px;
     margin: 5px 2px;
+    display: inline-block;
 }
 
 .hr hr {
