--- a/plugins/templates/minimalistic/public/menu.css
+++ b/plugins/templates/minimalistic/public/menu.css
@@ -636,6 +636,10 @@
     margin: 0;
 }
 
+.level-1 {padding: 0 0 0 20px;}
+.level-2 {padding: 0 0 0 40px;}
+.level-3 {padding: 0 0 0 60px;}
+
 .nav .menu {
     text-transform: uppercase;
     font-family: 'Encode Sans Condensed', sans-serif;
@@ -766,7 +770,7 @@
     padding: 8px 12px;
 }
 
-.box-item .menu .active a {
+.box-item .menu .active>a {
     background-color: rgba(240, 240, 240, 0.7);
     color: #000000;
     font-size: 16px;
